refactor: replace Collectors.toList() with toList()
- Use Java 16+ Stream.toList() instead of collect(Collectors.toList())
- Applies to TxnResponse, GetResponse, and DeleteResponse
- More concise and slightly more efficient